# LunchBuddy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_day_mapping.py  test_event_loop.py  test_lunch_confirmation.py  test_refactor.py
lunchbuddy/: __init__.py  bot.py  config.py  database.py  main.py  models.py  scheduler.py
src/lunchbuddy/: __init__.py  bot.py  config.py  database.py  main.py  messages.py  models.py  processor.py  utils.py
src/lunchbuddy/tests/: test_bot.py  test_config.yaml.example
