[project]
name = "lunchbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arpan Biswas", email = "arpanbiswas97@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-telegram-bot>=22.1",
]

[project.scripts]
lunchbuddy = "lunchbuddy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
